more work on modal, using css grid
